src/main/kubernetes/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/NithinKuruba/quarkus-petclinic.git
    app.quarkus.io/build-timestamp: 2021-02-05 - 10:47:20 +0000
    app.quarkus.io/commit-id: 08ca17721180e3e754b1f79f25ccd3c2de46237a
  labels:
    app.kubernetes.io/name: quarkus-petclinic
    app.kubernetes.io/version: 1.0.0
  name: quarkus-petclinic
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-petclinic
    app.kubernetes.io/version: 1.0.0
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/NithinKuruba/quarkus-petclinic.git
    app.quarkus.io/build-timestamp: 2021-02-05 - 10:47:20 +0000
    app.quarkus.io/commit-id: 08ca17721180e3e754b1f79f25ccd3c2de46237a
  labels:
    app.kubernetes.io/name: quarkus-petclinic
    app.kubernetes.io/version: 1.0.0
  name: quarkus-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-petclinic
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/NithinKuruba/quarkus-petclinic.git
        app.quarkus.io/build-timestamp: 2021-02-05 - 10:47:20 +0000
        app.quarkus.io/commit-id: 08ca17721180e3e754b1f79f25ccd3c2de46237a
      labels:
        app.kubernetes.io/name: quarkus-petclinic
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_OIDC_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: quarkus-petclinic-oidc-config
                  key: QUARKUS_OIDC_CLIENT_ID
            - name: QUARKUS_OIDC_CREDENTIALS_SECRET
              valueFrom:
                secretKeyRef:
                  name: quarkus-petclinic-oidc-config
                  key: QUARKUS_OIDC_CREDENTIALS_SECRET
          image: quay.io/nithinkuruba/quarkus-petclinic:1.0.0
          imagePullPolicy: Always
          name: quarkus-petclinic
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
