src/main/kubernetes/pgsql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: nithinkuruba-dev
  labels:
    app.kubernetes.io/instance: postgresql
    app.kubernetes.io/name: postgresql
spec:
  selector:
    name: postgresql
  ports:
    - name: pgsql
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: nithinkuruba-dev
  labels:
    app.kubernetes.io/instance: postgresql
    app.kubernetes.io/name: postgresql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: postgresql
  template:
    metadata:
      labels:
        name: postgresql
    spec:
      restartPolicy: Always
      containers:
        - name: postgresql
          image: quay.io/redhatdemo/openshift-pgsql12-primary:centos7
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: tcp
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-data
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql
