src/main/kubernetes/allow-internal.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-internal
  namespace: nithinkuruba-dev
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: quarkus-petclinic
  policyTypes:
    - Ingress
